--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
 
         async function callGeminiAPI(prompt) {
             // IMPORTANT: Paste your new API key here
-            const apiKey = "AIzaSyC9wpPlUniAv6IQRZEO2asMUszwEB_jiO4"; 
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
+            const apiKey = "sk-vQ2S0Mc4cnDl8TfaLmT3kBa2oNzvPSOTmjs2xvZB6082Jq9h"; 
+            const apiUrl = `https://api.moonshot.ai/v1}`;
             
             // Simple check to prevent sending request without a key
-            if (apiKey === "AIzaSyC9wpPlUniAv6IQRZEO2asMUszwEB_jiO4" || apiKey === "") {
+            if (apiKey === "sk-vQ2S0Mc4cnDl8TfaLmT3kBa2oNzvPSOTmjs2xvZB6082Jq9h" || apiKey === "") {
                 return "API Key not found. Please follow the instructions to add your API key to the code.";
             }
 
