--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             // ===================================================================
             const apiKey = "AIzaSyCYx5W8sutnwNw2m6coJRDf0-fF3RrSnEg"; 
             
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
+            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent}`;
             
             // Simple check to prevent sending request without a key
             if (apiKey === "AIzaSyCYx5W8sutnwNw2m6coJRDf0-fF3RrSnEg" || apiKey === "") {
