--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
             // PASTE YOUR NEW API KEY HERE, INSIDE THE QUOTES
             //
             // ===================================================================
-            const apiKey = "AIzaSyCYx5W8sutnwNw2m6coJRDf0-fF3RrSnEg"; 
+            const apiKey = "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"; 
             
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent}`;
+            const apiUrl = `https://openrouter.ai/api/v1}`;
             
             // Simple check to prevent sending request without a key
-            if (apiKey === "AIzaSyCYx5W8sutnwNw2m6coJRDf0-fF3RrSnEg" || apiKey === "") {
+            if (apiKey === "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" || apiKey === "") {
                 return "API Key not found. Please follow the instructions to add your API key to the code.";
             }
 
