--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             // ===================================================================
             const apiKey = "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"; 
             
-            const apiUrl = `https://openrouter.ai/api/v1}`;
+            const apiUrl = `https://openrouter.ai/api/v1/chat/completions}`;
             
             // Simple check to prevent sending request without a key
             if (apiKey === "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" || apiKey === "") {
