--- a/index.html
+++ b/index.html
@@ -2,88 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NCERT Science Books Chatbot</title>
+  <title>NCERT Class 11/12 Science Chatbot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Import MathJax for math rendering -->
+  <!-- MathJax for math rendering -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
     body {
       background: linear-gradient(120deg, #f6d365, #fda085, #a8edea, #fed6e3);
-      min-height: 100vh;
-      margin: 0;
       font-family: 'Segoe UI', Arial, sans-serif;
       font-size: 1.25em;
+      margin: 0;
       color: #1a1a2e;
     }
     h1, h2 {
+      text-align: center;
       color: #512da8;
       text-shadow: 1px 1px 3px #ffe;
-      text-align: center;
       margin-bottom: 0.2em;
     }
     .chat-container {
-      max-width: 600px;
-      background: rgba(255,255,255,0.95);
-      margin: 2em auto;
+      max-width: 650px;
+      background: rgba(255,255,255,0.97);
+      margin: 2em auto 1em auto;
       border-radius: 20px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.17);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.13);
       padding: 2em 2em 1em 2em;
+      min-height: 60vh;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
     }
     .user-message, .bot-message {
-      margin: 1em 0;
-      line-height: 1.7;
-      padding: 1em;
+      margin: 0.7em 0;
       border-radius: 15px;
-      max-width: 90%;
-      word-wrap: break-word;
-      transition: background 0.5s;
-      font-size: 1.2em;
+      max-width: 87%;
+      padding: 1em 1.2em;
+      font-size: 1.19em;
+      word-break: break-word;
     }
     .user-message {
-      background-color: #fff3e0;
-      text-align: right;
-      margin-left: auto;
+      align-self: flex-end;
+      background: #fff3e0;
       border: 2px solid #f9a825;
+      text-align: right;
     }
     .bot-message {
-      background-color: #e0f7fa;
-      text-align: left;
-      margin-right: auto;
+      align-self: flex-start;
+      background: #e0f7fa;
       border: 2px solid #0277bd;
-      animation: reveal 1.2s step-end;
+      text-align: left;
+      animation: reveal 1.1s step-end;
+      white-space: pre-line;
     }
     @keyframes reveal {
-      0% { opacity: 0; transform: translateY(20px);}
-      100% { opacity: 1; transform: translateY(0);}
+      0% {opacity: 0; transform: translateY(25px);}
+      100% {opacity: 1; transform: translateY(0);}
     }
     .motivational {
       background: linear-gradient(100deg, #e0c3fc, #8ec5fc 80%);
       margin: 1em 0;
-      padding: 0.8em 1em;
+      padding: 1em;
       border-radius: 10px;
       color: #28446e;
       font-weight: 600;
-      font-size: 1.1em;
+      font-size: 1.13em;
       border-left: 6px solid #512da8;
       text-align: center;
     }
-    .book-table {
-      width: 100%;
+    table {
       border-collapse: collapse;
-      margin: 1em 0;
-      font-size: 1.15em;
+      width: 100%;
+      margin: 0.8em 0;
+      font-size: 1.03em;
     }
-    .book-table th, .book-table td {
+    th, td {
       border: 1px solid #b39ddb;
-      padding: 0.7em;
+      padding: 0.46em 0.75em;
       text-align: left;
     }
-    .book-table th {
+    th {
       background: #b3e5fc;
       color: #1a237e;
     }
-    .book-table tr:nth-child(even) {
+    tr:nth-child(even) {
       background: #f3e5f5;
     }
     .math {
@@ -92,17 +94,19 @@
       margin: 1em 0;
       padding: 0.7em 1.3em;
       border-radius: 6px;
-      font-size: 1.1em;
       color: #00695c;
       font-family: 'Roboto Mono', Consolas, monospace;
+      display: inline-block;
     }
     .input-area {
       display: flex;
-      margin: 1.3em 0 0 0;
+      margin: 1.3em auto 1em auto;
+      width: 98%;
+      max-width: 650px;
     }
     .input-area input, .input-area button {
       font-size: 1.15em;
-      padding: 0.7em;
+      padding: 0.72em;
       border-radius: 9px;
       border: none;
     }
@@ -110,54 +114,49 @@
       flex: 1;
       margin-right: 0.8em;
       background: #e0f2f1;
+      outline: none;
     }
     .input-area button {
       background: #43a047;
       color: #fff;
       cursor: pointer;
+      min-width: 100px;
       transition: background 0.3s;
     }
     .input-area button:hover {
       background: #388e3c;
     }
-    @media (max-width:700px) {
-      .chat-container { padding: 1em; }
+    @media (max-width:800px) {
+      .chat-container, .input-area { padding: 1em; }
+      body { font-size: 1.1em;}
     }
   </style>
 </head>
 <body>
-  <h1>NCERT Books Chatbot</h1>
-  <h2>Class 11 & 12: Biology, Chemistry, Physics</h2>
+  <h1>NCERT Science Books Chatbot</h1>
+  <h2>Class 11 & 12 | Biology, Chemistry, Physics</h2>
   <div class="motivational">
-    🎯 Ignite Your Curiosity! Every question is a step toward brilliance. Let's explore!
+    🌟 Every day is a chance to learn something extraordinary! <br>
+    <i>Ask about books, chapters, or concepts.<br> Math formulas supported too!</i>
   </div>
   <div class="chat-container" id="chat">
     <div class="bot-message">
-      Hi! 👋 I can help you with details for Class 11 & 12 NCERT books in Biology, Chemistry, and Physics.<br>
-      <span style="color: #388e3c;">Type your subject or topic to start!</span>
+      Hi 👋! I can help you with NCERT Class 11 & 12 Biology, Chemistry, and Physics books, chapters, and key concepts.<br>
+      <b>What would you like to know?</b>
     </div>
   </div>
   <form class="input-area" onsubmit="return sendMessage();">
-    <input type="text" id="userInput" placeholder="Ask about a chapter, concept, or formula..." autocomplete="off" required />
+    <input type="text" id="userInput" placeholder="E.g. Class 12 Chemistry chapters or Laws of motion formula" autocomplete="off" required />
     <button type="submit">Send</button>
   </form>
 
   <script>
-    // Simulate human-like step-by-step reveal
-    function typeWriterEffect(element, text, step=1) {
-      let i = 0;
-      function type() {
-        if (i <= text.length) {
-          element.innerHTML = text.slice(0, i);
-          MathJax.typesetPromise(); // For math
-          i += step;
-          setTimeout(type, 25 + Math.random() * 20);
-        }
-      }
-      type();
-    }
+    // === CONFIGURATION ===
+    // To use OpenRouter API, set to true and add your key below
+    const USE_OPENROUTER = false; // set true to enable OpenRouter
+    const OPENROUTER_API_KEY = "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"; // <-- Replace with your OpenRouter API key
 
-    // Predefined book details
+    // === DATA ===
     const bookData = {
       "class 11": {
         "biology": [
@@ -188,16 +187,12 @@
         ]
       }
     };
-
-    // Sample motivational lines to show randomly
     const motivationLines = [
-      "🌟 Every discovery is a new step to success!",
-      "🤔 Keep questioning, keep learning!",
-      "📚 Dive deep, achievements are just ahead!",
-      "👏 Great question! Let's break it down together."
+      "✊ Keep going! Every question moves you forward.",
+      "🌈 Science is the poetry of reality—explore it!",
+      "🎯 Focus on one chapter at a time and master it.",
+      "🔬 Every formula unlocked is a power gained!"
     ];
-
-    // Suggest chapters and math
     const mathExamples = {
       "class 11 physics": [
         { concept: "Newton's Second Law", equation: "F = m a" },
@@ -208,76 +203,139 @@
       ]
     };
 
-    // Handle user input and bot responses
+    // === CHATBOT LOGIC ===
+
+    // Simulate step-by-step, human-like reply
+    function typeWriterEffect(el, text, cb = MathJax.typesetPromise) {
+      let alloc = 0, out = '';
+      function writeln() {
+        if (alloc < text.length) {
+          out += text[alloc];
+          el.innerHTML = out;
+          alloc++;
+          if (text[alloc-1] === '\n') MathJax.typesetPromise();
+          setTimeout(writeln, 15 + Math.random()*30);
+        } else if (cb) {
+          cb();
+        }
+      }
+      writeln();
+    }
+
+    document.getElementById('userInput').focus();
+
     function sendMessage() {
       const input = document.getElementById('userInput').value.trim();
       if (!input) return false;
       showMessage(input, "user");
-      processQuery(input.toLowerCase());
       document.getElementById('userInput').value = '';
+      if (USE_OPENROUTER) {
+        processOpenRouter(input);
+      } else {
+        processBasicQuery(input.toLowerCase());
+      }
       return false;
     }
 
-    function showMessage(message, sender="bot") {
+    function showMessage(text, sender="bot") {
       const chat = document.getElementById('chat');
       const msgDiv = document.createElement('div');
       msgDiv.className = sender === "user" ? "user-message" : "bot-message";
       if (sender === 'bot') {
-        msgDiv.innerHTML = '...'; // for typewriter effect
         chat.appendChild(msgDiv);
         chat.scrollTop = chat.scrollHeight;
-        setTimeout(() => typeWriterEffect(msgDiv, message), 300);
+        setTimeout(() => typeWriterEffect(msgDiv, text), 240);
       } else {
-        msgDiv.innerText = message;
+        msgDiv.innerText = text;
         chat.appendChild(msgDiv);
         chat.scrollTop = chat.scrollHeight;
       }
     }
 
-    function processQuery(q) {
-      let found = false;
-      let response = [];
-
-      // Motivational line
-      if (Math.random() > 0.85) {
-        response.push(`<div class="motivational">${motivationLines[Math.floor(Math.random() * motivationLines.length)]}</div>`);
+    // --- HANDLING BASIC DEMO LOGIC (HARDCODED) ---
+    function processBasicQuery(q) {
+      let found = false, lines = [];
+      if (Math.random() > 0.78) {
+        lines.push(`<div class="motivational">${motivationLines[Math.floor(Math.random()*motivationLines.length)]}</div>`);
       }
-
       for (let cls in bookData) {
         if (q.includes(cls)) {
           let subjects = bookData[cls];
           for (let subject in subjects) {
             if (q.includes(subject)) {
               found = true;
-              response.push(`<b>${cls.toUpperCase()} ${subject.charAt(0).toUpperCase() + subject.slice(1)} NCERT Books:</b>`);
-              response.push('<table class="book-table"><tr><th>Book</th><th>Chapters</th></tr>');
+              lines.push(`\n=== <b style="color:#00796b">${cls.toUpperCase()} ${subject.toUpperCase()}</b> ===`);
+              lines.push('<table><tr><th>Book</th><th>Chapters</th></tr>');
               subjects[subject].forEach(book => {
-                response.push(`<tr><td>${book.title}</td><td>${book.chapters}</td></tr>`);
+                lines.push(`<tr><td>${book.title}</td><td>${book.chapters}</td></tr>`);
               });
-              response.push('</table>');
-              // Add a math example if exists
+              lines.push('</table>');
               let mathKey = `${cls} ${subject}`;
               if (mathExamples[mathKey]) {
-                response.push('<div><span class="math">');
                 mathExamples[mathKey].forEach(ex => {
-                  response.push(`<b>${ex.concept}:</b> \\(${ex.equation}\\)<br>`);
+                  lines.push(`<div class="math"><b>${ex.concept}:</b> \\(${ex.equation}\\)</div>`);
                 });
-                response.push('</span></div>');
               }
             }
           }
         }
       }
 
-      // Default response
+      // Demo math if asked
+      if (!found && /formula|equation|math|motion|force|work|energy|enthalpy|mole|law/.test(q)) {
+        found = true;
+        lines.push("<b>Here's a sample equation:</b>");
+        lines.push(`<div class="math">Work Done: \\( W = F \\cdot d \\)</div>`);
+      }
+
       if (!found) {
-        response.push(
+        lines.push(
           "Sorry, I can only assist with Biology, Chemistry, and Physics for Class 11 & 12 at the moment.<br>" +
           "<span style='color: #d84315;'>Try asking: <i>Class 12 Chemistry chapters</i> or <i>Class 11 Physics formulas</i>.</span>"
         );
       }
+      showMessage(lines.join('\n'), "bot");
+    }
 
-      showMessage(response.join('\n'), "bot");
+    // --- OPTIONAL: OPENROUTER AI API LOGIC ---
+    const openrouterSystemPrompt = 
+      "You are an expert guide for Indian students. Help with NCERT Class 11 and 12 Physics, Chemistry, and Biology. " +
+      "Give book, chapter, and concept details, using math symbols as LaTeX when needed. Be motivational, clear, and concise. " + 
+      "Never answer for other subjects. Show one point per line, step-by-step, in a human style.";
+
+    let chatHistory = [
+      { role: "system", content: openrouterSystemPrompt }
+    ];
+
+    function processOpenRouter(userText) {
+      // Update chat history
+      chatHistory.push({ role: "user", content: userText });
+      showMessage('<i>Thinking...</i>', 'bot');
+      fetch("https://openrouter.ai/api/v1/chat/completions", {
+        method: "POST",
+        headers: {
+          "Authorization": `Bearer ${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}`, // <-- Your key here
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          model: "deepseek/deepseek-moe:free", // or any available OpenRouter model
+          messages: chatHistory,
+        })
+      })
+      .then(res => res.json())
+      .then(data => {
+        let aiReply = data?.choices?.[0]?.message?.content || "Sorry, couldn't fetch answer.";
+        chatHistory.push({ role: "assistant", content: aiReply });
+        // Remove the "Thinking..." message:
+        let chat = document.getElementById('chat');
+        chat.removeChild(chat.lastChild);
+        showMessage(aiReply, 'bot');
+      })
+      .catch(err => {
+        let chat = document.getElementById('chat');
+        chat.removeChild(chat.lastChild);
+        showMessage("Sorry, the service is temporarily unavailable. Please try again later.", 'bot');
+      });
     }
   </script>
 </body>
