--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <script>
     // === CONFIGURATION ===
     // To use OpenRouter API, set to true and add your key below
-    const USE_OPENROUTER = false; // set true to enable OpenRouter
+    const USE_OPENROUTER = true; // set true to enable OpenRouter
     const OPENROUTER_API_KEY = "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"; // <-- Replace with your OpenRouter API key
 
     // === DATA ===
