--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
       fetch("https://openrouter.ai/api/v1/chat/completions", {
         method: "POST",
         headers: {
-          "Authorization": `Bearer ${OPENROUTER_API_KEY}`, // <-- Your key here
+          "Authorization": `Bearer ${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}`, // <-- Your key here
           "Content-Type": "application/json"
         },
         body: JSON.stringify({
